--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Nuestros Planes</a>
+                                <a class="nav-link" href="#">Nuestros Planes</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Concesionarios</a>
@@ -51,11 +51,10 @@
                                     <li><a class="dropdown-item" href="#">Modelo 4</a></li>
                                     <li><a class="dropdown-item" href="#">Modelo 5</a></li>
                                     <li><a class="dropdown-item" href="#">Modelo 6</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 7</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 8</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 9</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 10</a></li>
                                 </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contactanos</a>
                             </li>
                         </ul>
                         <!-- <form class="d-flex mt-3" role="search">
@@ -77,13 +76,9 @@
                     <img src="./Imagenes/autoUno.png" alt="">
                     <img src="./Imagenes/autoDos.png" alt="">
                     <img src="./Imagenes/autoTres.png" alt="">
-                    <img src="./Imagenes/autoCuatro.png" alt="">
-                    <img src="./Imagenes/autoCinco.png" alt="">
                 </div>
                 <div class="slide">
-                    <img src="./Imagenes/autoSeis.png" alt="">
                     <img src="./Imagenes/autoSiete.png" alt="">
-                    <img src="./Imagenes/autoOcho.png" alt="">
                     <img src="./Imagenes/autoNueve.png" alt="">
                     <img src="./Imagenes/autoDiez.png" alt="">
                 </div>
@@ -91,22 +86,20 @@
         </section>
         <section>
             <div class="contenedorModelos">
-                <div class="modelo">Modelo1</div>
-                <div class="modelo">Modelo2</div>
-                <div class="modelo">Modelo3</div>
-                <div class="modelo">Modelo4</div>
-                <div class="modelo">Modelo5</div>
-                <div class="modelo">Modelo6</div>
-                <div class="modelo">Modelo7</div>
-                <div class="modelo">Modelo8</div>
-                <div class="modelo">Modelo9</div>
-                <div class="modelo">Modelo10</div>
+                <ul>
+                    <li class="modelo">Modelo</li>
+                    <li class="modelo">Modelo</li>
+                    <li class="modelo">Modelo</li>
+                    <li class="modelo">Modelo</li>
+                    <li class="modelo">Modelo</li>
+                    <li class="modelo">Modelo</li>
+                </ul>
             </div>
         </section>
         <section>
             <div class="contenedorCarros">
                 <div class="itemTarjeta">
-                    <img src="./Imagenes/autoUno.png" class="zoomable" alt="">
+                    <img src="./Imagenes/autoCinco.png" class="zoomable" alt="">
                     <p>TITULO</p>
                     <button>Ver Modelo</button>
                     <a href="">Pedí tu cotización <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -124,23 +117,79 @@
                     <a href="">Pedí tu cotización <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
+            <div class="contenedorCarros">
+                <div class="itemTarjeta">
+                    <img src="./Imagenes/autoTres.png" class="zoomable" alt="">
+                    <p>TITULO</p>
+                    <button>Ver Modelo</button>
+                    <a href="">Pedí tu cotización <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+                <div class="itemTarjeta">
+                    <img src="./Imagenes/autoCuatro.png" class="zoomable" alt="">
+                    <p>TITULO</p>
+                    <button>Ver Modelo</button>
+                    <a href="">Pedí tu cotización <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+                <div class="itemTarjeta">
+                    <img src="./Imagenes/autoUno.png" class="zoomable" alt="">
+                    <p>TITULO</p>
+                    <button>Ver Modelo</button>
+                    <a href="">Pedí tu cotización <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
         </section>
         <section>
             <div class="atCliente">
-                <div class="informacion">Sucursales</div>
-                <div class="informacion">Planes a tu medida</div>
-                <div class="informacion">Servicios</div>
+                <div class="informacion">
+                    <div class="contenedor">
+                        <img src="./Imagenes/consecionario.png" class="imagenInfo" alt="">
+                        <p class="tituloInfo">Sucursales</p>
+                    </div>
+                    <p class="textoInfo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed rem fugiat
+                        aspernatur nesciunt
+                        assumenda perferendis, fugit id. Reprehenderit cumque numquam officia in vel a! Facilis
+                        recusandae est culpa ut voluptatibus!</p>
+                </div>
+                <div class="informacion">
+                    <div class="contenedor">
+                        <img src="./Imagenes/planes.png" class="imagenInfo" alt="">
+                        <p class="tituloInfo">Planes a tu medida</p>
+                    </div>
+                    <p class="textoInfo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex itaque? Fuga
+                        ullam maxime
+                        unde, itaque vitae inventore quasi tempora repellendus aspernatur iste corporis error odio
+                        quibusdam eaque consectetur ut?</p>
+                </div>
+                <div class="informacion">
+                    <div class="contenedor">
+                        <img src="./Imagenes/servicios.png" class="imagenInfo" alt="">
+                        <p class="tituloInfo">Servicios</p>
+                    </div>
+                    <p class="textoInfo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum deserunt
+                        quaerat explicabo
+                        pariatur odit culpa soluta eligendi voluptate accusamus, ipsum repudiandae nisi ratione
+                        consequuntur in et, vitae vero! Labore, amet!</p>
+                </div>
             </div>
         </section>
         <section></section>
     </main>
     <footer>
-        <ul>
-            <li class="iconos"><i class="fa-brands fa-instagram"></i></li>
-            <li class="iconos"><i class="fa-brands fa-facebook"></i></li>
-            <li class="iconos"><i class="fa-brands fa-twitter"></i></li>
-            <li class="iconos"><i class="fa-brands fa-youtube"></i></li>
-        </ul>
+        <ul class="iconos">
+            <a href="#">
+              <li class="instagram"><i class="fa-brands fa-instagram"></i></li>
+            </a>
+            <a href="#">
+              <li class="facebook"><i class="fa-brands fa-facebook"></i></li>
+            </a>
+            <a href="#">
+              <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
+            </a>
+            <a href="#">
+                <li class="youtube"><i class="fa-brands fa-youtube"></i><li>
+              </a>
+          </ul>
+        <p class="copyR">Copyright&copy; 2023- Todos los derechos reservados</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
