--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                                     Modelos
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Modelo 1</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 3</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 3</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 4</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 5</a></li>
-                                    <li><a class="dropdown-item" href="#">Modelo 6</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -82,18 +82,6 @@
                     <img src="./Imagenes/autoNueve.png" alt="">
                     <img src="./Imagenes/autoDiez.png" alt="">
                 </div>
-            </div>
-        </section>
-        <section>
-            <div class="contenedorModelos">
-                <ul>
-                    <li class="modelo">Modelo</li>
-                    <li class="modelo">Modelo</li>
-                    <li class="modelo">Modelo</li>
-                    <li class="modelo">Modelo</li>
-                    <li class="modelo">Modelo</li>
-                    <li class="modelo">Modelo</li>
-                </ul>
             </div>
         </section>
         <section>
