--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Concesionarios</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Servicios</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     Modelos
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
+                                    <li><a class="dropdown-item" href="#">Modelo</a></li>
                                     <li><a class="dropdown-item" href="#">Modelo</a></li>
                                     <li><a class="dropdown-item" href="#">Modelo</a></li>
                                     <li><a class="dropdown-item" href="#">Modelo</a></li>
@@ -165,18 +174,19 @@
     <footer>
         <ul class="iconos">
             <a href="#">
-              <li class="instagram"><i class="fa-brands fa-instagram"></i></li>
+                <li class="instagram"><i class="fa-brands fa-instagram"></i></li>
             </a>
             <a href="#">
-              <li class="facebook"><i class="fa-brands fa-facebook"></i></li>
+                <li class="facebook"><i class="fa-brands fa-facebook"></i></li>
             </a>
             <a href="#">
-              <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
+                <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
             </a>
             <a href="#">
-                <li class="youtube"><i class="fa-brands fa-youtube"></i><li>
-              </a>
-          </ul>
+                <li class="youtube"><i class="fa-brands fa-youtube"></i>
+                <li>
+            </a>
+        </ul>
         <p class="copyR">Copyright&copy; 2023- Todos los derechos reservados</p>
     </footer>
 
