--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <section class="contenedorCarros" id="contenedorCards"></section>
         </section>
         <section>
-            <div class="atCliente">
+            <div class="atCliente" id="atCliente">
                 <div class="informacion">
                     <div class="contenedor">
                         <img src="./Imagenes/consecionario.png" class="imagenInfo" alt="">
