cambios en estilo y agrege fotos nuevas al nav

--- a/index.html
+++ b/index.html
@@ -59,20 +59,34 @@
         <section class="whatsapp">
             <a href=""><img src="./Imagenes/whatsapap.png" alt=""></a>
         </section>
-        <div class="carousel">
+        <section class="carousel">
+            <img src="./Imagenes/LUXE DRIVE.png" alt="">
             <div class="carousel-container">
-                <img src="./Imagenes/autoUno.png" alt="Imagen 1" class="carousel-item active">
-                <img src="./Imagenes/autoDos.png" alt="Imagen 2" class="carousel-item">
-                <img src="./Imagenes/autoTres.png" alt="Imagen 3" class="carousel-item">
-                <img src="./Imagenes/autoCuatro.png" alt="Imagen 4" class="carousel-item">
-                <img src="./Imagenes/autoCinco.png" alt="Imagen 5" class="carousel-item">
-                <img src="./Imagenes/autoDiez.png" alt="Imagen 6" class="carousel-item">
+                <img src="./Imagenes/carousel1.png" alt="Imagen 1" class="carousel-item active">
+                <img src="./Imagenes/carousel2.png" alt="Imagen 2" class="carousel-item">
+                <img src="./Imagenes/carousel3.png" alt="Imagen 3" class="carousel-item">
+                <img src="./Imagenes/carousel4.png" alt="Imagen 4" class="carousel-item">
+                <img src="./Imagenes/carousel5.png" alt="Imagen 5" class="carousel-item">
+                <img src="./Imagenes/carpusel6.png" alt="Imagen 6" class="carousel-item">
             </div>
             <div class="carousel-controls">
                 <button class="prev-button"><i class="fa-solid fa-angle-left"></i></button>
                 <button class="next-button"><i class="fa-solid fa-angle-right"></i></button>
             </div>
-        </div>
+        </section>
+        <section id="containerBusqueda">
+            <section class="checkbox" id="checkbox">
+                <input type="checkbox">
+                <label for="checkbox">Sedan</label>
+                <input type="checkbox">
+                <label for="checkbox">Sport</label>
+                <input type="checkbox">
+                <label for="checkbox">SUV</label>
+            </section>
+            <section class="search" id="search">
+                <input type="search" id="inputSearch" placeholder="Busqueda">
+            </section>
+        </section>
         <section id="containerPages">
             <section id="contenedosPlanes"></section>
             <section id="contenedorSucursales"></section>
@@ -91,8 +105,10 @@
                         <p class="tituloInfo">Sucursales</p>
                     </div>
                     <p class="textoInfo">Estamos ubicados en diversos puntos estratégicos de la ciudad, lo que nos
-                        permite brindarte la comodidad de visitarnos en cualquier momento. Además, de contar con sucursales 
-                        en selectas provincias, acercándonos aún más a nuestros clientes. Nuestro objetivo es brindarte la mejor experiencia de compra de autos, estés
+                        permite brindarte la comodidad de visitarnos en cualquier momento. Además, de contar con
+                        sucursales
+                        en selectas provincias, acercándonos aún más a nuestros clientes. Nuestro objetivo es brindarte
+                        la mejor experiencia de compra de autos, estés
                         donde estés.</p>
                 </div>
                 <div class="informacion">
