--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="whatsapp">
             <a href=""><img src="./Imagenes/whatsapap.png" alt=""></a>
         </section>
-        <section class="carousel">
+        <section class="carousel" id="carousel">
             <img src="./Imagenes/LUXE DRIVE.png" alt="">
             <div class="carousel-container">
                 <img src="./Imagenes/carousel1.png" alt="Imagen 1" class="carousel-item active">
