--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                 <label for="checkbox">Sport</label>
                 <input type="checkbox">
                 <label for="checkbox">SUV</label>
+                <input type="checkbox">
+                <label for="checkbox">Pickup</label>
             </section>
             <section class="search" id="search">
                 <input type="search" id="inputSearch" placeholder="Busqueda">
