--- a/public/index.html
+++ b/public/index.html
@@ -76,18 +76,18 @@
         </section>
         <section id="containerBusqueda">
             <section class="checkbox" id="checkbox">
-                <input type="checkbox">
+                <!-- <input type="checkbox">
                 <label for="checkbox">Sedan</label>
                 <input type="checkbox">
                 <label for="checkbox">Sport</label>
                 <input type="checkbox">
                 <label for="checkbox">SUV</label>
                 <input type="checkbox">
-                <label for="checkbox">Pickup</label>
+                <label for="checkbox">Pickup</label> -->
             </section>
-            <section class="search" id="search">
+            <!-- <section class="search" id="search">
                 <input type="search" id="inputSearch" placeholder="Busqueda">
-            </section>
+            </section> -->
         </section>
         <section id="containerPages">
             <section id="contenedosPlanes"></section>
@@ -149,6 +149,21 @@
         <p class="copyR">Copyright&copy; 2023- Todos los derechos reservados</p>
     </footer>
 
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
