--- a/public/index.html
+++ b/public/index.html
@@ -76,18 +76,10 @@
         </section>
         <section id="containerBusqueda">
             <section class="checkbox" id="checkbox">
-                <!-- <input type="checkbox">
-                <label for="checkbox">Sedan</label>
-                <input type="checkbox">
-                <label for="checkbox">Sport</label>
-                <input type="checkbox">
-                <label for="checkbox">SUV</label>
-                <input type="checkbox">
-                <label for="checkbox">Pickup</label> -->
             </section>
-            <!-- <section class="search" id="search">
+            <section class="search" id="search">
                 <input type="search" id="inputSearch" placeholder="Busqueda">
-            </section> -->
+            </section>
         </section>
         <section id="containerPages">
             <section id="contenedosPlanes"></section>
