--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./CSS/Style.css">
     <link rel="stylesheet" href="./CSS/Inicio.css">
     <link rel="stylesheet" href="./CSS/Detalles.css">
+    <link rel="stylesheet" href="./CSS/Consecionarios.css">
     <title>Luxe Drive</title>
 </head>
 
@@ -83,7 +84,9 @@
         </section>
         <section id="containerPages">
             <section id="contenedosPlanes"></section>
-            <section id="contenedorSucursales"></section>
+            <section id="contenedorSucursales">
+                <section class="sucursalesN" id="nombreSucursales"></section>
+            </section>
             <section id="contenedorServicios"></section>
             <section id="contenedorContactanos"></section>
             <section id="contenedorDetalles">
@@ -183,6 +186,7 @@
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 
         
+
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
@@ -191,6 +195,9 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="./JS/index.js"></script>
+    <script src="./JS/Detalles.js"></script>
+    <script src="./JS/Sucursales.js"></script>
+    <script src="./JS/Contactanos.js"></script>
 </body>
 
 </html>
