--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 
-        
+
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
@@ -198,6 +198,7 @@
     <script src="./JS/Detalles.js"></script>
     <script src="./JS/Sucursales.js"></script>
     <script src="./JS/Contactanos.js"></script>
+    <script src="./JS/Planes.js"></script>
 </body>
 
 </html>
