--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
                 </ul>
             </section>
         </section>
-        <p class="copyR">Copyright&copy; 2023- Todos los derechos reservados</p>
+        <p class="copyR">Copyright&copy; Luxe-Drive - Todos los derechos reservados</p>
     </footer>
     <script type="module">
         // Import the functions you need from the SDKs you need
