add: contactos y servicios

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./CSS/Inicio.css">
     <link rel="stylesheet" href="./CSS/Detalles.css">
     <link rel="stylesheet" href="./CSS/Consecionarios.css">
+    <link rel="stylesheet" href="./CSS/Servicios.css">
+    <link rel="stylesheet" href="./CSS//Contactanos.css">
     <title>Luxe Drive</title>
 </head>
 
@@ -199,6 +201,7 @@
     <script src="./JS/Sucursales.js"></script>
     <script src="./JS/Contactanos.js"></script>
     <script src="./JS/Planes.js"></script>
+    <script src="./JS/Servicios.js"></script>
 </body>
 
 </html>
