--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./CSS/Consecionarios.css">
     <link rel="stylesheet" href="./CSS/Servicios.css">
     <link rel="stylesheet" href="./CSS//Contactanos.css">
+    <link rel="stylesheet" href="./CSS/Planes.css">
     <title>Luxe Drive</title>
 </head>
 
@@ -186,6 +187,8 @@
 
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
+
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
